# rtt-sim-embedded

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/cosima-robot-sim/: rtt_robot_manipulator_sim.hpp
include/cosima-robot-sim/robots/: robot_manipulator_bullet.hpp  robot_manipulator_gazebo.hpp  robot_manipulator_if.hpp
include/cosima-robot-sim/simulator_interface/: sim_if.hpp
include/cosima-robot-sim/simulator_interface/bullet/: bullet_if.hpp
include/cosima-robot-sim/simulator_interface/gazebo/: gazebo_if.hpp
include/cosima-robot-sim/test/: b3RobotSimulatorClientAPI.hpp  b3RobotSimulatorClientAPI_NoDirect.hpp  b3RobotSimulatorClientAPI_NoGUI.hpp  interface_test.hpp  rtt_interface_test.hpp
include/rtt-bullet-embedded/api/: b3_capi_wrapper_no_gui.hpp
include/rtt-bullet-embedded/robots/: robot_manipulator_internal.hpp  rtt_bullet_robot_manipulator_sim.hpp
scripts/: launch_pybullet_server.py  test.ops  test_alternative_bullet_interface.ops  test_connect_bullet.ops  test_ros_parameter_server.ops  test_ros_parameter_server_wsot.ops  test_ros_parameter_server_wsot2.ops  test_ros_parameter_server_wsot2_dlw.ops
src/: rtt_bullet_embedded.cpp  rtt_bullet_embedded.hpp  rtt_robot_manipulator_sim.cpp
src/api/: b3_capi_wrapper_no_gui.cpp
src/robots/: robot_manipulator_bullet.cpp  robot_manipulator_gazebo.cpp  robot_manipulator_if.cpp  robot_manipulator_internal.cpp  robot_manipulator_internal.hpp  rtt_bullet_robot_manipulator_sim.cpp  rtt_bullet_robot_manipulator_sim.hpp
src/simulator_interface/: sim_if.cpp
src/simulator_interface/bullet/: b3_capi_wrapper_no_gui.cpp  bullet_if.cpp
src/simulator_interface/gazebo/: gazebo_if.cpp
src/test/: b3RobotSimulatorClientAPI.cpp  b3RobotSimulatorClientAPI_NoDirect.cpp  b3RobotSimulatorClientAPI_NoGUI.cpp  interface_test.cpp  rtt_interface_test.cpp
