<?xml version="1.0"?>
<package format="2">
  <name>cosima-robot-sim</name>
  <version>0.1.0</version>
  <description>The cosima-robot-sim package</description>
  <maintainer email="dwigand@cor-lab.de">Dennis Leroy Wigand</maintainer>
  <license>LGPLv3</license>
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cosima-robot-sim</url> -->
  <author email="dwigand@cor-lab.de">Dennis Leroy Wigand</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>

  <!-- <build_depend>roscpp</build_depend> -->
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>geometry_msgs</build_depend> -->
  <build_depend>sensor_msgs</build_depend>

  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <build_export_depend>std_msgs</build_export_depend>
  <!-- <build_export_depend>geometry_msgs</build_export_depend> -->
  <build_export_depend>sensor_msgs</build_export_depend>

  <!-- <exec_depend>roscpp</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>geometry_msgs</exec_depend> -->
  <exec_depend>sensor_msgs</exec_depend>

  <depend>liborocos-kdl-dev</depend>
  <build_depend>kdl_parser</build_depend>

  <depend>rtt_ros</depend>
  <depend>roscpp</depend>
  <!-- <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
    </rtt_ros>
  </export>

  <!-- Do not forget to add the package to ROS_PACKAGE_PATH in order to be properly imported by the ros orocos service. -->
  <!-- i.e. export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/home/flex/system/flexassembly_dev_ws/install/share -->
</package>
